monticore-generator/src/test/resources/cocos/invalid/A4027/A4027.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4027;

grammar A4027 extends cocos.valid.Enum {

  E;
}
